--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
     "pydantic-settings (>=2.12.0,<3.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
     "sqlalchemy (>=2.0.45,<3.0.0)",
-    "psycopg2 (>=2.9.11,<3.0.0)"
+    "psycopg2 (>=2.9.11,<3.0.0)",
+    "alembic (>=1.17.2,<2.0.0)",
+    "asyncpg (>=0.31.0,<0.32.0)"
 ]
 
 [tool.poetry]
