--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "sqlalchemy (>=2.0.45,<3.0.0)",
     "psycopg2 (>=2.9.11,<3.0.0)",
     "alembic (>=1.17.2,<2.0.0)",
-    "asyncpg (>=0.31.0,<0.32.0)"
+    "asyncpg (>=0.31.0,<0.32.0)",
+    "fastapi-users[jwt,oauth] (>=15.0.1,<16.0.0)"
 ]
 
 [tool.poetry]
